--- a/killer/src/main/resources/application.properties
+++ b/killer/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.url=jdbc:mysql://150.158.180.158:33060
 spring.datasource.username=root
 spring.datasource.password=199505
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
+# 在控制台显示SQL语句
+spring.jpa.show-sql=true
+# 自动检查实体类和数据库表是否一致, 如果不一致会更新数据库表
+spring.jpa.hibernate.ddl-auto=update
