--- a/killer/src/main/resources/application.properties
+++ b/killer/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=1995
 
 # 数据库基本配置
-spring.datasource.url=jdbc:mysql://150.158.180.158:33060
+spring.datasource.url=jdbc:mysql://150.158.180.158:33060?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=199505
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
