--- a/killer/src/main/resources/application.properties
+++ b/killer/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 # 自动检查实体类和数据库表是否一致, 如果不一致会更新数据库表
 spring.jpa.hibernate.ddl-auto=update
+
+# swagger配置
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
