--- a/xzs/src/main/resources/application.yml
+++ b/xzs/src/main/resources/application.yml
@@ -4,3 +4,6 @@ spring:
     username: root
     password: 199505
     driver-class-name: com.mysql.cj.jdbc.Driver
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
