httpservlet&xml config servlet

--- a/itheima/web-demo/src/main/webapp/WEB-INF/web.xml
+++ b/itheima/web-demo/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
+  <!-- XML方式配置ServletDemo13 -->
+  <servlet>
+    <servlet-name>demo13</servlet-name>
+    <servlet-class>com.itheima.web.ServletDemo13</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>demo13</servlet-name>
+    <url-pattern>/demo13</url-pattern>
+  </servlet-mapping>
 </web-app>
