--- a/itheima/springmvc-demo/pom.xml
+++ b/itheima/springmvc-demo/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>spring-webmvc</artifactId>
       <version>5.2.12.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -55,6 +60,7 @@
             <port>8899</port>
             <!-- 资源访问路径 -->
             <!--<path>/</path>-->
+            <uriEncoding>utf-8</uriEncoding>
           </configuration>
         </plugin>
       </plugins>
