--- a/itheima/springboot-ssmp/src/main/resources/application.yml
+++ b/itheima/springboot-ssmp/src/main/resources/application.yml
@@ -1,12 +1,3 @@
-# port
-server:
-  port: 80
-
-# datasource config
 spring:
-  datasource:
-    druid:
-      url: jdbc:mysql://150.158.180.158:33060?serverTimezone=UTC
-      username: root
-      password: 199505
-      driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active: dev
