--- a/itheima-v2/reggie-take-out/pom.xml
+++ b/itheima-v2/reggie-take-out/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.15</version>
         </dependency>
+        <!--添加邮件依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
